fix(sync): wrap long lines in source content when editing it in Anki Desktop's rich editor

--- a/packages/autoanki-sync/src/plugin/style.css
+++ b/packages/autoanki-sync/src/plugin/style.css
@@ -20,6 +20,8 @@ anki-editable autoanki-source-content {
   display: initial;
   /**
    * Render white spaces and new line characters (`\n`).
+   * But with `pre` very long lines in the original source will be truncated
+   * (hidden) in Anki desktop's rich editor. Thus we use `pre-wrap`.
    */
-  white-space: pre;
+  white-space: pre-wrap;
 }
